--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 .App {
   text-align: center;
+  max-width: 960px;
+  margin: 0 auto;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
+body {
+  background: #f9f8fe;
+}
+. @media (prefers-reduced-motion: no-preference) {
 }
