--- a/src/App.css
+++ b/src/App.css
@@ -11,5 +11,10 @@
 body {
   background: #f9f8fe;
 }
-. @media (prefers-reduced-motion: no-preference) {
+.app-footer {
+  margin: 30px 0;
+  text-align: center;
+}
+.App-header {
+  margin: 5px 0;
 }
