--- a/src/PhaseRange.css
+++ b/src/PhaseRange.css
@@ -1,7 +1,7 @@
-.PhaseRange section {
+.Phase-box {
   background: white;
   padding: 30px;
   border-radius: 16px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-  margin: 20px 0;
+  margin: 10px 0;
 }
