--- a/src/CycleSelector.css
+++ b/src/CycleSelector.css
@@ -1,6 +1,28 @@
 .phase {
-  background: white;
   padding: 30px;
   border-radius: 16px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+#phase-select {
+  font-size: 18px;
+  padding: 8px 12px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  background-color: white;
+  cursor: pointer;
+}
+
+.phase select:focus {
+  outline: none;
+  border: 2px solid #ff8fa3;
+  background-color: white;
+}
+
+label[for="phase-select"] {
+  font-weight: bold;
+  color: #555;
+  font-size: 18px;
+  margin-bottom: 6px;
+  display: inline-block;
 }
