--- a/src/PhaseRange.css
+++ b/src/PhaseRange.css
@@ -5,3 +5,9 @@
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
   margin: 10px 0;
 }
+
+.Phase-box ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
